test/org/midica/testfiles/failing/eff-signed-vol.midica
INCLUDE inc/instruments.midica


0: vol.set(+50)
